@@ -1,6 +1,6 @@
 /* Target-dependent code for AMD64 Solaris.
 
-   Copyright (C) 2001, 2002, 2003, 2004, 2006, 2007
+   Copyright (C) 2001, 2002, 2003, 2004, 2006, 2007, 2008
    Free Software Foundation, Inc.
 
    Contributed by Joseph Myers, CodeSourcery, LLC.
