@@ -1,7 +1,7 @@
 /* Target-dependent code for NetBSD/i386.
 
    Copyright (C) 1988, 1989, 1991, 1992, 1994, 1996, 2000, 2001, 2002, 2003,
-   2004, 2007 Free Software Foundation, Inc.
+   2004, 2007, 2008 Free Software Foundation, Inc.
 
    This file is part of GDB.
 
